worked on reporting section
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1593 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -813,10 +813,19 @@
                     <tagListOptions>
                         <tagClasses>
                             <tagClass>
-                                <displayName>Important Tags</displayName>
+                                <displayName>Important fixes that have to be done until the next release</displayName>
                                 <tags>
                                     <tag>
                                         <matchString>FIXME</matchString>
+                                        <matchType>ignoreCase</matchType>
+                                    </tag>
+                                </tags>
+                            </tagClass>
+                            <tagClass>
+                                <displayName>Things to verify and to check</displayName>
+                                <tags>
+                                    <tag>
+                                        <matchString>// check:</matchString>
                                         <matchType>ignoreCase</matchType>
                                     </tag>
                                 </tags>
