--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -397,24 +397,38 @@
         <moduleDir>.</moduleDir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdkVersion>1.6</jdkVersion>
-        <apache.common.lang.version>2.5.0</apache.common.lang.version>
-        <spring.version>3.0.6.RELEASE</spring.version>
-        <spring.osgi.version>1.2.1</spring.osgi.version>
-        <spring.security.version>3.0.4.RELEASE</spring.security.version>
-        <hibernate.version>3.4.0.GA-A</hibernate.version>
-        <granite.version>2.2.1.GA</granite.version>
-        <flex.version>3.2.0.3958</flex.version>
-	    <slf4j.version>1.5.10</slf4j.version>
-	    <junit.version>4.7.0</junit.version>
         <maven.compile.targetLevel>${jdkVersion}</maven.compile.targetLevel>
         <maven.compile.sourceLevel>${jdkVersion}</maven.compile.sourceLevel>
+
+        <!-- Dependency versions -->
+        <apache.commons.dbcp.version>1.2.2.osgi</apache.commons.dbcp.version>
+        <apache.commons.lang.version>2.5.0</apache.commons.lang.version>
+        <flex.version>3.2.0.3958</flex.version>
+        <granite.version>2.2.1.GA</granite.version>
+        <hibernate.version>3.4.0.GA-A</hibernate.version>
+        <javax.persistence.version>1.0.0</javax.persistence.version>
+        <junit.version>4.7.0</junit.version>
+        <net.sf.ehcache.version>1.6.2</net.sf.ehcache.version>
+        <org.hsqldb.version>1.8.0.9</org.hsqldb.version>
+        <org.postgresql.jdbc4.version>8.3.604</org.postgresql.jdbc4.version>
+        <slf4j.version>1.5.10</slf4j.version>
+        <spring.osgi.version>1.2.1</spring.osgi.version>
+        <spring.security.version>3.0.4.RELEASE</spring.security.version>
+        <spring.version>3.0.6.RELEASE</spring.version>
+
         <!-- OSGi header versions -->
-        <osgi.apache.common.lang.version>${apache.common.lang.version}</osgi.apache.common.lang.version>
-        <osgi.spring>${spring.version}</osgi.spring>
+        <osgi.apache.commons.lang.version>${apache.commons.lang.version}</osgi.apache.commons.lang.version>
+        <osgi.apache.commons.dbcp.version>${apache.commons.dbcp.version}</osgi.apache.commons.dbcp.version>
         <osgi.hibernate>3.3.2.GA</osgi.hibernate>
-        <osgi.hibernate.annotations>3.4.0.GA-A</osgi.hibernate.annotations>
+        <osgi.hibernate.annotations>${hibernate.version}</osgi.hibernate.annotations>
         <osgi.hibernate.annotations.common>3.3.0.ga</osgi.hibernate.annotations.common>
-        <osgi.hibernate.ejb>3.4.0.GA-A</osgi.hibernate.ejb>
+        <osgi.hibernate.ejb>${hibernate.version}</osgi.hibernate.ejb>
+        <osgi.javax.persistence.version>${javax.persistence.version}</osgi.javax.persistence.version>
+        <osgi.net.sf.ehcache.version>${net.sf.ehcache.version}</osgi.net.sf.ehcache.version>
+        <osgi.org.hsqldb.version>${org.hsqldb.version}</osgi.org.hsqldb.version>
+        <osgi.org.postgresql.jdbc4.version>${org.postgresql.jdbc4.version}</osgi.org.postgresql.jdbc4.version>
+        <osgi.spring>${spring.version}</osgi.spring>
+        <osgi.spring.security.version>${spring.security.version}</osgi.spring.security.version>
     </properties>
 
     <pluginRepositories>
@@ -1080,7 +1094,7 @@
             <dependency>
                 <groupId>javax.persistence</groupId>
                 <artifactId>com.springsource.javax.persistence</artifactId>
-                <version>1.0.0</version>
+                <version>${javax.persistence.version}</version>
             </dependency>
             <dependency>
                 <groupId>javax.transaction</groupId>
@@ -1097,12 +1111,12 @@
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>com.springsource.org.apache.commons.lang</artifactId>
-                <version>${apache.common.lang.version}</version>
+                <version>${apache.commons.lang.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>com.springsource.org.apache.commons.dbcp</artifactId>
-                <version>1.2.2.osgi</version>
+                <version>${apache.commons.dbcp.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -1119,12 +1133,12 @@
             <dependency>
                 <groupId>org.hsqldb</groupId>
                 <artifactId>com.springsource.org.hsqldb</artifactId>
-                <version>1.8.0.9</version>
+                <version>${org.hsqldb.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.postgresql</groupId>
                 <artifactId>com.springsource.org.postgresql.jdbc4</artifactId>
-                <version>8.3.604</version>
+                <version>${org.postgresql.jdbc4.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.openwms</groupId>
