--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.wrapper/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.wrapper/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.app</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.1</version>
     </parent>
     <artifactId>org.openwms.client.flex.wrapper</artifactId>
     <packaging>war</packaging>
