--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/pom.xml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/pom.xml
@@ -27,7 +27,7 @@
 	<parent>
 		<groupId>org.openwms</groupId>
 		<artifactId>org.openwms.common</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.1</version>
 	</parent>
 	<artifactId>org.openwms.common.flex.module</artifactId>
 	<packaging>swf</packaging>
