--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.domain.as/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.domain.as/pom.xml
@@ -27,7 +27,7 @@
 	<parent>
 		<groupId>org.openwms</groupId>
 		<artifactId>org.openwms.core</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.1</version>
 	</parent>
 	<artifactId>org.openwms.core.domain.as</artifactId>
 	<packaging>swc</packaging>
