--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.domain.as/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.domain.as/pom.xml
@@ -27,7 +27,7 @@
 	<parent>
 		<groupId>org.openwms</groupId>
 		<artifactId>org.openwms.tms</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.1</version>
 	</parent>
 	<artifactId>org.openwms.tms.domain.as</artifactId>
 	<packaging>swc</packaging>
@@ -110,7 +110,7 @@
                         <class>org.openwms.core.domain.DomainObject</class>
                     </includeJavaClasses>
                     <excludeJavaClasses>
-		    <exclude>**.package-info</exclude> 
+		                <exclude>**.package-info</exclude> 
                         <class>org.openwms.core.domain.system.usermanagement.User$1</class>
                         <class>org.openwms.tms.domain.order.TransportOrder$1</class>
                     </excludeJavaClasses>
