--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.domain/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.domain/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.tms</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.1</version>
     </parent>
     <artifactId>org.openwms.tms.domain</artifactId>
     <packaging>jar</packaging>
