--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.service.spring/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.service.spring/pom.xml
@@ -27,14 +27,14 @@
 	<parent>
 		<groupId>org.openwms</groupId>
 		<artifactId>org.openwms.tms</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.1</version>
 	</parent>
 	<artifactId>org.openwms.tms.service.spring</artifactId>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 	<properties>
 		<moduleDir>../../..</moduleDir>
-        <openwms.configuration.version>0.0.1-SNAPSHOT</openwms.configuration.version>
+        <openwms.configuration.version>0.1</openwms.configuration.version>
 	</properties>
 	<build>
         <resources>
@@ -116,7 +116,7 @@
         <dependency>
             <groupId>net.sourceforge.ehcache</groupId>
             <artifactId>com.springsource.net.sf.ehcache</artifactId>
-            <version>1.6.2</version>
+            <version>${net.sf.ehcache.version}</version>
             <scope>provided</scope>
         </dependency>
 
