--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -26,7 +26,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.openwms</groupId>
     <artifactId>org.openwms</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <packaging>pom</packaging>
     <name>OpenWMS.org Project</name>
     <description>This is an Open Source Software (OSS) project</description>
@@ -359,6 +359,26 @@
             </build>
         </profile>
         <profile>
+            <id>aggregate-docs</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <configuration>
+                            <detectLinks>true</detectLinks>
+                            <excludePackageNames>org.openwms.web.flex.servlet</excludePackageNames>
+                            <keywords>true</keywords>
+                            <linksource>true</linksource>
+                            <overview>${basedir}/overview.html</overview>
+                            <source>${project.build.sourceCompilerLevel}</source>
+                            <stylesheetfile>${basedir}/src/site/css/openwms-jdoc.css</stylesheetfile>
+                            <verbose>true</verbose>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>generate_glossary</id>
             <!-- Call this profile together with all to generate the DocBook Glossary file -->
             <!-- Note: The used doclet plugin is available on the private Nexus repository only -->
@@ -631,7 +651,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
-                    <version>2.1-alpha-2</version>
+                    <version>2.1.1</version>
                 </plugin>
 
                 <plugin>
