set to new development version 0.1.1-SNAPSHOT
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1608 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.domain/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.domain/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.core</artifactId>
-        <version>0.1</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.core.domain</artifactId>
     <name>${project.artifactId}</name>
