--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.postgres/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.postgres/pom.xml
@@ -27,14 +27,14 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.core</artifactId>
-        <version>0.1</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.core.infrastructure.postgres</artifactId>
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <properties>
         <moduleDir>../../..</moduleDir>
-        <openwms.configuration.version>0.1</openwms.configuration.version>
+        <openwms.configuration.version>0.1.1-SNAPSHOT</openwms.configuration.version>
     </properties>
     <build>
         <resources>
