--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.service.api/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.service.api/pom.xml
@@ -27,7 +27,7 @@
 	<parent>
 		<groupId>org.openwms</groupId>
 		<artifactId>org.openwms.tms</artifactId>
-		<version>0.1</version>
+		<version>0.1.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.openwms.tms.service.api</artifactId>
 	<packaging>jar</packaging>
