--- a/org.openwms/trunk/org.openwms.app/org.openwms.app.par/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.app.par/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.app</artifactId>
-        <version>0.1</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
     <artifactId>org.openwms.app.par</artifactId>
     <packaging>par</packaging>
