--- a/org.openwms/trunk/org.openwms.common/pom.xml
+++ b/org.openwms/trunk/org.openwms.common/pom.xml
@@ -27,17 +27,17 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms</artifactId>
-        <version>0.1</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
     <groupId>org.openwms</groupId>
     <artifactId>org.openwms.common</artifactId>
-    <version>0.1</version>
+    <version>0.1.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>OpenWMS.org COMMON</name>
     <properties>
         <moduleDir>../..</moduleDir>
-        <core.version>0.1</core.version>
-        <bundle.version>0.1</bundle.version>
+        <core.version>0.1.1-SNAPSHOT</core.version>
+        <bundle.version>0.1.1.SNAPSHOT</bundle.version>
     </properties>
 
     <distributionManagement>
