Due to a bug http://jira.codehaus.org/browse/MCOBERTURA-101 switched cobertura plugin to version 2.3
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1631 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/pom.xml
+++ b/org.openwms/trunk/pom.xml
@@ -175,8 +175,8 @@
     </mailingLists>
 
     <ciManagement>
-        <system>Hudson</system>
-        <url>http://openwms.blogsite.org:8181</url>
+        <system>Jenkins</system>
+        <url>http://openwms.blogsite.org:81/jenkins</url>
     </ciManagement>
 
     <profiles>
@@ -423,7 +423,7 @@
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>cobertura-maven-plugin</artifactId>
-                        <version>2.2</version>
+                        <version>2.3</version>
                         <configuration>
                             <formats>
                                 <format>xml</format>
