git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1673 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.wms/org.openwms.wms.domain/pom.xml
+++ b/org.openwms/trunk/org.openwms.wms/org.openwms.wms.domain/pom.xml
@@ -78,7 +78,7 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Weaver -->
+        <!-- Weaver >
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>com.springsource.org.aspectj.weaver</artifactId>
@@ -88,7 +88,7 @@
             <groupId>org.aspectj</groupId>
             <artifactId>com.springsource.org.aspectj.runtime</artifactId>
             <scope>test</scope>
-        </dependency>
+        </dependency-->
 
         <!-- Test dependencies -->
         <dependency>
