git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1685 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.wms/org.openwms.wms.domain/pom.xml
+++ b/org.openwms/trunk/org.openwms.wms/org.openwms.wms.domain/pom.xml
@@ -117,6 +117,12 @@
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.core.util</artifactId>
+            <version>${core.version}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- COMMON Project dependencies -->
         <dependency>
