3519299 worked on WMS domain model
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1686 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.wms/org.openwms.wms.domain/pom.xml
+++ b/org.openwms/trunk/org.openwms.wms/org.openwms.wms.domain/pom.xml
@@ -137,5 +137,13 @@
             <version>${common.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- TMS Project dependencies -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.tms.domain</artifactId>
+            <version>${tms.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
