--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.test/src/test/resources/jdbc.test.properties
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.test/src/test/resources/jdbc.test.properties
@@ -26,8 +26,8 @@ jdbc.test.persistenceUnit=OpenWMS-test
 jdbc.test.dialect=org.hibernate.dialect.HSQLDialect
 
 #jdbc.test.driverClassName=org.postgresql.Driver
-#jdbc.test.url=jdbc:postgresql:OPENWMSDB
+#jdbc.test.url=jdbc:postgresql:OPENWMSTEST
 #jdbc.test.username=OPENWMS
 #jdbc.test.password=OPENWMS
 #jdbc.test.persistenceUnit=OpenWMS-test
-#jdbc.test.dialect=org.eclipse.persistence.platform.database.PostgreSQLPlatform
+#jdbc.test.dialect=org.hibernate.dialect.PostgreSQLDialect
