--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.domain/pom.xml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.domain/pom.xml
@@ -69,7 +69,7 @@
             <groupId>org.hibernate</groupId>
             <artifactId>org.hibernate.ejb-library</artifactId>
             <type>libd</type>
-            <scope>test</scope>
+            <scope>provided</scope>
         </dependency>
 
         <!-- CORE Project dependencies -->
