git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1744 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.integration.jpa/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.integration.jpa/pom.xml
@@ -110,6 +110,12 @@
             <type>libd</type>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>com.springsource.org.apache.commons.lang</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
