--- a/org.openwms/trunk/org.openwms.app/org.openwms.app.plan/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.app.plan/pom.xml
@@ -176,7 +176,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>org.springframework.aspects</artifactId>
-            <version>${spring.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -344,14 +343,16 @@
             <artifactId>com.springsource.org.apache.commons.lang</artifactId>
             <scope>provided</scope>
         </dependency>
+        <!-- JPA Provider -->
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>org.hibernate.ejb-library</artifactId>
-            <type>libd</type>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.ehcache</groupId>
             <artifactId>com.springsource.net.sf.ehcache</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.graniteds</groupId>
