updated to Spring 3.1.1 and JPA2
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1767 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/pom.xml
+++ b/org.openwms/trunk/org.openwms.app/pom.xml
@@ -40,6 +40,7 @@
         <core.version>0.1.1-SNAPSHOT</core.version>
         <common.version>0.1.1-SNAPSHOT</common.version>
         <tms.version>0.1.1-SNAPSHOT</tms.version>
+        <wms.version>0.0.1-SNAPSHOT</wms.version>
     </properties>
 
     <distributionManagement>
@@ -59,9 +60,6 @@
     <profiles>
         <profile>
             <id>all</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
             <modules>
                 <module>org.openwms.app.par</module>
                 <module>org.openwms.app.plan</module>
