updated to Spring 3.1.1 and JPA2
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1777 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.service.api/pom.xml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.service.api/pom.xml
@@ -52,8 +52,8 @@
 	</build>
 	<dependencies>
         <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>com.springsource.javax.persistence</artifactId>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <!-- Project dependencies -->
