--- a/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.oracle/pom.xml
+++ b/org.openwms/trunk/org.openwms.core/org.openwms.core.infrastructure.oracle/pom.xml
@@ -68,8 +68,8 @@
 
         <!-- JEE API -->
         <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>com.springsource.javax.persistence</artifactId>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.0-api</artifactId>
             <scope>provided</scope>
         </dependency>
 
